--- a/configs/ROHQD.yaml
+++ b/configs/ROHQD.yaml
@@ -3,7 +3,7 @@ model:
   target: RestoreFormer.models.vqgan_v1.RestoreFormerModel
   params:
     image_key: 'gt'
-    ckpt_path: /scratch/tnguy231/RFExperiments/tnguy231/logs/2024-02-21T02-10-12_ROHQDROHQD_gpus1_seed91/checkpoints/last.ckpt
+    #ckpt_path: /scratch/tnguy231/RFExperiments/tnguy231/logs/2024-02-21T02-10-12_ROHQDROHQD_gpus1_seed91/checkpoints/last.ckpt
     schedule_step: [100000, 200000]
     # ignore_keys: ['vqvae.quantize.utility_counter']
     ddconfig:
@@ -18,8 +18,8 @@ model:
         out_ch: 3
         ch: 32
         ch_mult: [1,2,2,4,4,8]  # num_down = len(ch_mult)-1
-        num_res_blocks: 2
         attn_resolutions: [16, 32, 64]
+        num_res_blocks: 2
         dropout: 0.0
         enable_mid: True
         fix_decoder: False
@@ -86,25 +86,20 @@ lightning:
     accumulate_grad_batches: 1
     #max_steps: 256
 
-  profiler: 
-    #target: pytorch_lightning.profilers.AdvancedProfiler
-    #params:
-    #  dirpath: "."
-    #  filename: "cprofout"
-
-    #target: pytorch_lightning.profilers.PyTorchProfiler
-    #params:
-    #  dirpath: perf_logs
-    #  filename: log
-    #  #emit_nvtx: True
-    #  export_to_chrome: True
-    #  # profiler kwargs
-    #  profile_memory: True
-    #  with_flops: True
-    #  schedule:
-    #    target: torch.profiler.schedule
-    #    params:
-    #      wait: 10
-    #      warmup: 1
-    #      active: 3
-    #      repeat: 1
+    #profiler: 
+    #  target: pytorch_lightning.profilers.PyTorchProfiler
+    #  params:
+    #    dirpath: perf_logs
+    #    filename: log
+    #    #emit_nvtx: True
+    #    export_to_chrome: True
+    #    # profiler kwargs
+    #    profile_memory: True
+    #    with_flops: True
+    #    schedule:
+    #      target: torch.profiler.schedule
+    #      params:
+    #        wait: 10
+    #        warmup: 1
+    #        active: 3
+    #        repeat: 1
