--- a/configs/RBA.yaml
+++ b/configs/RBA.yaml
@@ -1,6 +1,6 @@
 model:
   base_learning_rate: 4.5e-6 
-  target: RestoreFormer.models.vqgan_v1.RestoreFormerModel
+  target: RestoreFormer.models.vqgan_v1.RBAModel
   params:
     image_key: 'lq'
     #ckpt_path: '/scratch/tnguy231/RFExperiments/tnguy231/logs/2024-01-06T13-50-41_ROHQDROHQD_gpus1_seed26/checkpoints/epoch=000079.ckpt'
@@ -18,16 +18,37 @@ model:
         in_channels: 3  
         out_ch: 3
         ch: 64
-        ch_mult: [1,2,2,4,4,8]  # num_down = len(ch_mult)-1
+        ch_mult: [1,2,2,2,4,4]  # num_down = len(ch_mult)-1
         num_res_blocks: 2
         attn_resolutions: [16, 32, 64]
         dropout: 0.0
         enable_mid: True
         fix_decoder: False
-        fix_codebook: True
+        fix_codebook: False
         fix_encoder: False
         head_size: 4
         ex_multi_scale_num: 1
+
+    #refencoderconfig:
+    #  target: RestoreFormer.modules.vqvae.vqvae_arch.MultiHeadEncoder
+    #  params:
+    #    embed_dim: 512
+    #    n_embed: 4096
+    #    double_z: False
+    #    z_channels: 512
+    #    resolution: 512
+    #    in_channels: 3  
+    #    out_ch: 3
+    #    ch: 64
+    #    ch_mult: [1,2,4,8]  # num_down = len(ch_mult)-1
+    #    num_res_blocks: 2
+    #    attn_resolutions: []
+    #    dropout: 0.0
+    #    enable_mid: True
+    #    fix_decoder: False
+    #    fix_codebook: False
+    #    fix_encoder: False
+
 
     lossconfig:
       target: RestoreFormer.modules.losses.vqperceptual.VQLPIPSWithDiscriminatorWithCompWithIdentity
@@ -50,10 +71,10 @@ data:
     batch_size: 16 # per device
     num_workers: 7
     train:
-      target: RestoreFormer.data.ffhq_uneven_degradation_dataset.FFHQUnevenDegradationDataset
+      target: RestoreFormer.data.ref_dataset.RefDataset
       params:
         #dataroot_gt: /scratch/tnguy231/FFHQ/image512x512
-        #dataroot_gt: /home/trtx/College/24/zyan/data/CelebHQRef
+        dataroot_gt: /home/trtx/College/24/zyan/data/CelebHQRef
         io_backend:
           type: disk
         use_hflip: True
@@ -94,9 +115,10 @@ data:
 
 
     validation:
-      target: RestoreFormer.data.ffhq_degradation_dataset.FFHQDegradationDataset
+      target: RestoreFormer.data.ref_dataset.RefDataset
       params:
-        dataroot_gt: /scratch/tnguy231/FFHQ/image512x512
+        #dataroot_gt: /scratch/tnguy231/FFHQ/image512x512
+        dataroot_gt: /home/trtx/College/24/zyan/data/lfw
         io_backend:
           type: disk
         use_hflip: False
